--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style/style.css">
+    <title>PAI, laboratorium 1</title>
 </head>
 <body>
-    
+
+    <header>
+        <h1>Podstawy aplikacji internetowych</h1>
+        <h3>Lab. 1 system kontroli wersji i przypomnienie HTML5/CSS</h3>
+    </header>
+    <article>
+        <h4>Przykładowa zawartość w trzech sekcjach</h4>
+        <section id="sec1">
+            <h4 class="SEC_HEADER">Praca z lokalnym repozytorium git</h4>
+            <ul>
+                <li><span>Zainicjuj repozytorium</span></li>
+                <li><span>Wpisz lokalnie nazwę <em>"user.name"</em> i e-mail <em>"user.email"</em></span></li>
+                <li><span>Dodaj katalogi, pliki, wpisz zawartość i zapisz zmiany</span></li>
+                <li><span>Przejdź do panelu <em>"Source Control"</em></span></li>
+                <li><span>Ustaw zmodyfikowanym plikom stan <em>"Staged"</em></span></li>
+                <li><span>Wprowadź opis do pola tekstowego <em>"Message"</em></span></li>
+                <li><span>Zatwierdź zmiany lokalnie za pomocą <em>"commit"</em></span></li>
+              </ul>
+        </section>
+        <section id="sec2">
+            <h4 class="SEC_HEADER">Przykładowy wygenerowany tekst</h4>
+            <p>Paragraf tekstu wygenerowany narzędziem emmet (instrukcja Lorem100 [TAB])</p>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum necessitatibus nostrum ex amet tempore. Officiis, corrupti nulla recusandae numquam quibusdam in dolores? Vitae temporibus nam animi consequuntur blanditiis voluptate atque necessitatibus minima ipsa. Cupiditate repellendus ipsum perspiciatis mollitia enim expedita velit quas voluptatibus ipsam accusamus alias deserunt possimus, ea suscipit aliquam laborum officia itaque cum quae ipsa esse omnis. Debitis, enim reprehenderit sapiente cum perspiciatis distinctio blanditiis mollitia beatae dolores, dolor ipsam aliquid autem possimus odio, eum voluptates inventore. Minima quae corporis possimus unde quam quis deleniti necessitatibus molestias tenetur, laborum nulla ipsa fuga asperiores praesentium labore quidem dolorem vel.</p>
+        </section>
+        <section id="sec3">
+            <h4 class="SEC_HEADER">Linki do stron uczelni</h4>
+            <p><a href="https://www.pk.edu.pl" target="_blank">Politechnika Krakowska</a></p>
+            <p><a href="https://www.uj.edu.pl" target="_blank">Uniwersytet Jagielloński</a></p>
+            <p><a href="https://www.agh.edu.pl" target="_blank">Akademia Górniczo-Hutnicza</a></p>
+        </section>
+    </article>
+    <footer>
+        <p><img class="IMAGE_F" src="img/b1.png" alt="obrazek"></p>
+        <p><img class="IMAGE_F" src="img/b2.png" alt="obrazek"></p>
+        <p><img class="IMAGE_F" src="img/b3.png" alt="obrazek"></p>
+    </footer>
 </body>
 </html>
