Zapis nr 3, CSS

--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
         </section>
         <section id="sec2">
             <h4 class="SEC_HEADER">Przykładowy wygenerowany tekst</h4>
-            <p>Paragraf tekstu wygenerowany narzędziem emmet (instrukcja Lorem100 [TAB])</p>
+            <p>Paragraf tekstu wygenerowany narzędziem emmet (instrukcja Lorem100 [TAB])
             <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum necessitatibus nostrum ex amet tempore. Officiis, corrupti nulla recusandae numquam quibusdam in dolores? Vitae temporibus nam animi consequuntur blanditiis voluptate atque necessitatibus minima ipsa. Cupiditate repellendus ipsum perspiciatis mollitia enim expedita velit quas voluptatibus ipsam accusamus alias deserunt possimus, ea suscipit aliquam laborum officia itaque cum quae ipsa esse omnis. Debitis, enim reprehenderit sapiente cum perspiciatis distinctio blanditiis mollitia beatae dolores, dolor ipsam aliquid autem possimus odio, eum voluptates inventore. Minima quae corporis possimus unde quam quis deleniti necessitatibus molestias tenetur, laborum nulla ipsa fuga asperiores praesentium labore quidem dolorem vel.</p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum necessitatibus nostrum ex amet tempore. Officiis, corrupti nulla recusandae numquam quibusdam in dolores? Vitae temporibus nam animi consequuntur blanditiis voluptate atque necessitatibus minima ipsa. Cupiditate repellendus ipsum perspiciatis mollitia enim expedita velit quas voluptatibus ipsam accusamus alias deserunt possimus, ea suscipit aliquam laborum officia itaque cum quae ipsa esse omnis. Debitis, enim reprehenderit sapiente cum perspiciatis distinctio blanditiis mollitia beatae dolores, dolor ipsam aliquid autem possimus odio, eum voluptates inventore. Minima quae corporis possimus unde quam quis deleniti necessitatibus molestias tenetur, laborum nulla ipsa fuga asperiores praesentium labore quidem dolorem vel.</p>
         </section>
         <section id="sec3">
             <h4 class="SEC_HEADER">Linki do stron uczelni</h4>
-            <p><a href="https://www.pk.edu.pl" target="_blank">Politechnika Krakowska</a></p>
-            <p><a href="https://www.uj.edu.pl" target="_blank">Uniwersytet Jagielloński</a></p>
-            <p><a href="https://www.agh.edu.pl" target="_blank">Akademia Górniczo-Hutnicza</a></p>
+            <p><a href="https://www.pk.edu.pl" target="_blank">Politechnika Krakowska</a>
+            <br><a href="https://www.uj.edu.pl" target="_blank">Uniwersytet Jagielloński</a>
+            <br><a href="https://www.agh.edu.pl" target="_blank">Akademia Górniczo-Hutnicza</a></p>
         </section>
     </article>
     <footer>
-        <p><img class="IMAGE_F" src="img/b1.png" alt="obrazek"></p>
-        <p><img class="IMAGE_F" src="img/b2.png" alt="obrazek"></p>
-        <p><img class="IMAGE_F" src="img/b3.png" alt="obrazek"></p>
+        <p><img class="IMAGE_F" src="img/b1.png" alt="obrazek">
+        <img class="IMAGE_F" src="img/b2.png" alt="obrazek">
+        <img class="IMAGE_F" src="img/b3.png" alt="obrazek"></p>
     </footer>
 </body>
 </html>
